not exactly happy about how i made this work but it works. pursue better avenues eventually just get it to the point where i like it. and make the collapse work and then make sure it works on different views then move on

--- a/app/styles/admin.css
+++ b/app/styles/admin.css
@@ -18,6 +18,7 @@ body {
 
 .navbar-top-links {
     margin-right: 0;
+    margin-top: 17px;
 }
 
 .navbar-top-links li {
@@ -298,7 +299,7 @@ table.dataTable thead .sorting:after {
 }
 
 .logo {
-    margin: 4px 16px 4px 4px;
+    margin: 4px 4px 4px 4px;
     text-transform: none;
     letter-spacing: 2px;
     font-weight: lighter !important;
@@ -328,11 +329,11 @@ table.dataTable thead .sorting:after {
     font-size: x-large;
     font-weight: lighter !important;
     display: block;
-    margin-top: 2px;
+    margin-top: 12px;
 }
 
 .logo-text-small {
     display: block;
-    margin-top: 2px;
+    margin-top: -2px;
     font-weight: lighter !important;
 }
